<resources>

    <string name="app_name">ProbandoBackEndless</string>
    <string name="app_icon">HR MODULE</string>
    <string name="app_login">HR MODULE</string>
    <string name="app_main">Login</string>
    <string name="app_description">Gestión de recursos.</string>
    <string name="app_userName">Usuario</string>
    <string name="app_userPw">Contraseña</string>
    <string name="app_buttonLogin">LOGIN</string>
    <string name="app_buttonRegister">REGISTRARSE</string>
    <string name="app_menu_principal">Menú Principal</string>
    <string name="app_menu_proyectos">Proyectos</string>
    <string name="app_menu_empleados">Empleados</string>
    <string name="app_crear_empleado">Crear Empleado</string>
    <string name="newEmpleado">Crear nuevo empleado</string>
    <string name="newProyecto">Crear nuevo proyecto</string>
    <string name="empleados">Empleados</string>
    <string name="proyectos">Proyectos</string>
    <string name="empleado_nombre">Nombre</string>
    <string name="proyecto_nombre">Nombre del proyecto</string>
    <string name="empleado_apellidos">Apellidos</string>
    <string name="empleado_movil">Movil</string>
    <string name="empleado_direccion">Dirección</string>
    <string name="empleado_email">Email</string>
    <string name="empleado_guardar">Guardar empleado</string>
    <string name="proyecto_guardar">Guardar proyecto</string>
    <string name="proyecto_actualizar">Actualizar proyecto</string>
    <string name="listar_empleados">Listar empleados</string>
    <string name="listar_Proyectos">Listar proyectos</string>
    <string name="edit_empleado">Editar empleado</string>
    <string name="delete_empleado">Borrar empleado</string>
    <string name="empleado_actualizar">Actualizar empleado</string>
    <string name="proyectos_finalizados">Proyectos finalizados</string>
    <string name="jefe_proyecto">Jefe de proyecto</string>
    <string name="presupuesto">Presupuesto €</string>
    <string name="cliente">Cliente</string>
    <string name="fecha_inicio">Fecha de inicio</string>
    <string name="fecha_fin">Fecha de fin</string>
    <string name="finalizado">Finalizado</string>
    <string name="proyecto_activos">Lista de proyectos</string>
    <string name="editar_proyecto">Editar proyecto</string>
    <string name="crear_proyecto">Crear proyecto</string>
    <string name="asignar_proyecto">Asignar proyecto</string>
    <string name="asignar_empleado">Asignar empleado</string>
    <string name="logout">Cerrar sesión</string>
    <string name="mi_cuenta">Mi cuenta</string>
    <string name="buscar">Buscar</string>
    <string name="informes">Informes</string>
    <string name="salario">Salario €</string>
    <string name="contraseña_perdida">¿Contraseña perdida?</string>
    <string name="enviar">Enviar correo</string>
    <string name="cancelar">Cancelar</string>
    <string name="antiguo_empleado">Listar antiguos empleados</string>
    <string name="menu_home">Home</string>
    <string name="antiguos">Antiguos Empleados</string>
    <string name="antiguos_proyectos">Antiguos Proyectos</string>
    <string name="descripcion_gasto">Descripción del gasto</string>
    <string name="cantidad">Cantidad</string>
    <string name="guardar_gasto">Guardar Gasto</string>
    <string name="titulo">Título</string>
    <string name="description">Descripción</string>
    <string name="localizacion">Localización</string>
    <string name="crear_evento">Crear Evento</string>
    <string name="titulo_agenda">Agenda</string>
    <string name="pw_actual">Contraseña actual</string>
    <string name="pw_nueva">Nueva contraseña</string>
    <string name="confirmacion_pw">Confirmacion contraseña</string>
    <string name="cambiar_pw">Cambiar contraseña</string>
    <string name="name_app">Aplicación RRHH</string>
    <string name="fecha_contratacion">Fecha de contratación</string>
    <string name="gastos_proyecto">Gastos proyecto</string>

</resources>
