<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:com.example.actionbar="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buscar"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/buscar"
        com.example.actionbar:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/home"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/menu_home"
        app:showAsAction="ifRoom|collapseActionView" />

    <!-- MENU -->

    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/miCuenta"
        android:title="@string/mi_cuenta"
        app:showAsAction="never" />

    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logout"
        android:title="@string/logout"
        app:showAsAction="never" />

</menu>
