<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_main"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/bootstrap_gray_lighter"
    tools:context="com.example.accplinux.probandobackendless.MainActivity">

    <com.beardedhen.androidbootstrap.AwesomeTextView
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/app_titulo"
        android:textSize="35sp"
        app:bootstrapBrand="primary"
        app:bootstrapText="@string/app_login"
        style="@style/wrapping_fa_text"
        tools:ignore="SpUsage" />

    <com.beardedhen.androidbootstrap.AwesomeTextView
        android:layout_below="@+id/app_titulo"
        android:layout_centerHorizontal="true"
        android:text="@string/app_description"
        android:id="@+id/textView"
        android:textSize="30sp"
        style="@style/wrapping_fa_text"
        app:bootstrapBrand="success" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/usuario"
        android:id="@+id/password"
        android:gravity="center_horizontal"
        android:inputType="textPassword"
        android:hint="@string/app_userPw"
        android:ellipsize="start"
        android:textSize="20sp"
        android:textColorHint="#afb42b"
        android:textColorHighlight="#ff7eff15"
        android:background="@drawable/edit_text_style"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:id="@+id/usuario"
        android:gravity="center_horizontal"
        android:focusable="true"
        android:inputType="textEmailAddress"
        android:hint="@string/app_userName"
        android:textSize="20sp"
        android:ems="10"
        android:ellipsize="start"
        android:textColorHint="#afb42b"
        android:textColorHighlight="#ff7eff15"
        android:background="@drawable/edit_text_style"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:layout_marginTop="14dp"
        android:id="@+id/imageView"
        android:src="@drawable/consultoria_rrhh"
        android:contentDescription="@string/app_login"/>

    <com.beardedhen.androidbootstrap.AwesomeTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/grupoMain"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:id="@+id/resetPw"
        android:text="@string/contraseña_perdida"
        app:bootstrapBrand="info"/>


    <com.beardedhen.androidbootstrap.BootstrapButtonGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginTop="14dp"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:id="@+id/grupoMain"
        app:bootstrapBrand="success"
        app:bootstrapSize="md"
        app:roundedCorners="true">

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:id="@+id/buttonRegister"
            android:text="@string/app_buttonRegister"
            />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/buttonLogin"
            android:text="@string/app_buttonLogin" />
    </com.beardedhen.androidbootstrap.BootstrapButtonGroup>

</RelativeLayout>
