<?xml version="1.0" encoding="utf-8"?>
<!-- copyrighted content owned by Android Arena (www.androidarena.co.in)-->
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/crearEmpleado"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#E0F7FA"
        android:orientation="vertical">

        <include
            android:id="@+id/tool_bar"
            layout="@layout/toolbar"
            ></include>

        <LinearLayout android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="30dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/nueva_empleada"
                    android:layout_gravity="center_horizontal"
                    android:baselineAlignBottom="true"
                    android:layout_alignEnd="@+id/iconoEmpleado"
                    android:layout_marginEnd="66dp"
                    android:contentDescription="@string/crear_proyecto"/>
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:id="@+id/iconoEmpleado"
                    android:background="@drawable/nuevo_empleado"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="121dp"
                    android:contentDescription="@string/crear_proyecto"/>
            </RelativeLayout>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:id="@+id/nombre"
                android:inputType="text"
                android:hint="@string/empleado_nombre"
                android:textColorHighlight="#ff7eff15"
                android:textColorHint="#26A69A"
                android:focusable="true"
                android:background="#f3f3f3"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="#f3f3f3"
                android:id="@+id/apellidos"
                android:hint="@string/empleado_apellidos"
                android:focusable="true"
                android:textColorHighlight="#ff7eff15"
                android:textColorHint="#26A69A"
                android:inputType="text" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="#f3f3f3"
                android:id="@+id/empleado_email"
                android:hint="@string/empleado_email"
                android:focusable="true"
                android:textColorHighlight="#ff7eff15"
                android:textColorHint="#26A69A"
                android:inputType="textEmailAddress"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="#f3f3f3"
                android:id="@+id/empleado_movil"
                android:hint="@string/empleado_movil"
                android:focusable="true"
                android:textColorHighlight="#ff7eff15"
                android:textColorHint="#26A69A"
                android:inputType="phone"/>
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="#f3f3f3"
                android:id="@+id/empleado_direccion"
                android:hint="@string/empleado_direccion"
                android:focusable="true"
                android:textColorHighlight="#ff7eff15"
                android:textColorHint="#26A69A"
                android:inputType="text"/>
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="#f3f3f3"
                android:id="@+id/salario"
                android:hint="@string/salario"
                android:focusable="true"
                android:textColorHighlight="#ff7eff15"
                android:textColorHint="#26A69A"
                android:inputType="number"
                />

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:text="@string/empleado_guardar"
                android:layout_width="190dp"
                android:layout_height="38dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:id="@+id/guardarEmpleado"
                style="@style/wrapping_button"
                app:bootstrapBrand="primary"
                app:roundedCorners="true"
                app:showOutline="true"/>
        </LinearLayout>
        <LinearLayout android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#DCEDC8">
        </LinearLayout>
    </LinearLayout>



</ScrollView>
