<?xml version="1.0" encoding="utf-8"?>
<!-- copyrighted content owned by Android Arena (www.androidarena.co.in)-->
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/crearEmpleado"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#E0F7FA">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#E0F7FA"
        android:orientation="vertical">

        <include
            android:id="@+id/tool_bar"
            layout="@layout/toolbar"
            ></include>


        <LinearLayout android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="30dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:id="@+id/iconoEmpleado"
                    android:background="@drawable/seguridad"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="135dp"
                    android:contentDescription="@string/crear_proyecto"/>
            </RelativeLayout>
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="#f3f3f3"
                android:id="@+id/nuevaContraseña"
                android:hint="@string/pw_nueva"
                android:focusable="true"
                android:textColorHighlight="#ff7eff15"
                android:textColorHint="#26A69A"
                android:inputType="textPassword" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="#f3f3f3"
                android:id="@+id/confirmacion"
                android:hint="@string/confirmacion_pw"
                android:focusable="true"
                android:textColorHighlight="#ff7eff15"
                android:textColorHint="#26A69A"
                android:inputType="textPassword"/>

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:text="@string/cambiar_pw"
                android:layout_width="190dp"
                android:layout_height="38dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:id="@+id/cambiarContraseña"
                style="@style/wrapping_button"
                app:bootstrapBrand="primary"
                app:roundedCorners="true"
                app:showOutline="true"/>
        </LinearLayout>
        <LinearLayout android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#E0F7FA">
        </LinearLayout>
    </LinearLayout>
</ScrollView>

