<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_menu_proyectos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bootstrap_gray_lighter"
    tools:context="com.example.accplinux.probandobackendless.MenuProyectos">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/toolbar">
    </include>

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/listarProyectos"
        android:text="@string/listar_Proyectos"
        android:layout_marginTop="81dp"
        android:layout_below="@+id/newProyecto"
        android:layout_centerHorizontal="true"
        app:bootstrapBrand="success"
        app:roundedCorners="true"/>

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/newProyecto"
        android:text="@string/newProyecto"
        app:bootstrapBrand="info"
        android:layout_marginTop="81dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        app:roundedCorners="true"/>

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/proyectosFinalizados"
        app:bootstrapBrand="danger"
        android:text="@string/proyectos_finalizados"
        android:layout_marginTop="82dp"
        android:layout_below="@+id/listarProyectos"
        app:roundedCorners="true"/>

    <com.whygraphics.gifview.gif.GIFView
        xmlns:gif_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/gif_menu_proyectos"
        android:layout_margin="50dp"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/proyectosFinalizados"
        android:scaleType="center"
        gif_view:gif_src="url:https://d13yacurqjgara.cloudfront.net/users/410036/screenshots/2128761/concept2.gif" />

    <!--
    <ImageView
        android:id="@+id/gifProyecto"
        android:layout_below="@id/proyectosFinalizados"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"/>
    -->
</RelativeLayout>
